@@ -125,7 +125,7 @@ typedef enum
   GDK_GRAVITY_SOUTH_WEST,
   GDK_GRAVITY_SOUTH,
   GDK_GRAVITY_SOUTH_EAST,
-  GDK_GRAVITY_STATIC,
+  GDK_GRAVITY_STATIC
 } GdkGravity;
 
 struct _GdkWindowAttr
